# pr-pilot

./: .env.example  .gitignore  Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pr-pilot.yml
assets/: sample.diff
src/pr_pilot/: main.py  quality_metrics.py
tests/: test_eval_results.py  test_quality_metrics.py
tests/eval/: RESULTS.md  results.json  run_eval.py
tests/eval/summaries/: diff_entrypoint_accept_header.diff_only.md  diff_entrypoint_accept_header.with_context.md  diff_entrypoint_hardening.diff_only.md  diff_entrypoint_hardening.with_context.md  diff_multifile_cleanup.diff_only.md  diff_multifile_cleanup.with_context.md  diff_readme_docs.diff_only.md  diff_readme_docs.with_context.md  diff_typeddict_refactor.diff_only.md  diff_typeddict_refactor.with_context.md
tests/fixtures/: diff_entrypoint_accept_header.diff  diff_entrypoint_accept_header.meta.json  diff_entrypoint_hardening.diff  diff_entrypoint_hardening.meta.json  diff_multifile_cleanup.diff  diff_multifile_cleanup.meta.json  diff_readme_docs.diff  diff_readme_docs.meta.json  diff_typeddict_refactor.diff  diff_typeddict_refactor.meta.json
